crates/nits-review-core/tests/snapshots/render__no_trailing_newline__exact.snap
---
source: crates/nits-review-core/tests/render.rs
expression: r
---
{
  "content": {
    "type": "Text",
    "total_rows": 1,
    "chunk_rows": 500,
    "chunk_count": 1,
    "highlighted": false,
    "additions": 0,
    "deletions": 0,
    "gaps": [
      {
        "gap": 0,
        "row": 0
      }
    ]
  },
  "rows": [
    {
      "type": "Expander",
      "hidden": 2,
      "dir": "Both",
      "gap": 0
    }
  ]
}
